--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <base href="/">
+  <link rel="icon" href="cover.jpg">
   <meta charset="UTF-8" />
   <title>Central Park Guardian</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
