--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/">
+  <base href="./">
   <link rel="icon" href="cover.jpg">
   <meta charset="UTF-8" />
   <title>Central Park Guardian</title>
